Add "F usage" group of technologies

--- a/message_ix_models/data/transport/technology.yaml
+++ b/message_ix_models/data/transport/technology.yaml
@@ -349,6 +349,11 @@ transport F ROAD usage:
   input: {commodity: transport F ROAD vehicle}
   output: {commodity: transport F ROAD}
 
+F usage:
+  child:
+  - transport F RAIL usage
+  - transport F ROAD usage
+
 transport pax load factor:
   description: >-
     Conversion from vehicle-distance traveled to passenger transport activity
