Add aluminum updates

--- a/message_ix_models/data/material/set.yaml
+++ b/message_ix_models/data/material/set.yaml
@@ -516,6 +516,9 @@ aluminum:
 
   technology:
     add:
+    - trade_alumina
+    - import_alumina
+    - export_alumina
     - refining_aluminum
     - soderberg_aluminum
     - prebake_aluminum
