--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,6 +17,9 @@ build:
     post_install:
     # Remove requests-cache, which appears to cause segfaults on RTD workers
     - pip uninstall --yes requests-cache
+    # TEMPORARY With Python 3.13 pyam-iamc resolves to 1.3.1, which in turn
+    # limits pint < 0.17. Override.
+    - pip install --upgrade pint
 
 
 # Build documentation in the docs/ directory with Sphinx
@@ -28,5 +31,4 @@ python:
   - requirements: doc/requirements.txt
   - method: pip
     path: .
-    extra_requirements:
-      - docs
+    extra_requirements: [ docs ]
