Fix steel scrap recovery technologies
And update the diffusion constraints in SSP specific data files:
remove growth_activity_lo and initial_activity_lo for bof_steel
set growth_activity_up for "dri_gas_steel", "dri_h2_steel", "eaf_steel" to 0.075
set initial_activity_up for "dri_gas_steel", "dri_h2_steel" to 1.0
then, set the NZE targets for steel in years [2070, 2080, 2090, 2100] to [4.2, 3.7, 3.2, 2.7,]

--- a/message_ix_models/data/material/set.yaml
+++ b/message_ix_models/data/material/set.yaml
@@ -341,7 +341,9 @@ steel:
     - demand
     - dummy_emission
     - end_of_life
-    - dummy_end_of_life
+    - dummy_end_of_life_1
+    - dummy_end_of_life_2
+    - dummy_end_of_life_3
     - dummy_ccs
 
   technology:
@@ -363,7 +365,9 @@ steel:
     - prep_secondary_steel_3
     - finishing_steel
     - manuf_steel
-    - scrap_recovery_steel
+    - scrap_recovery_steel_1
+    - scrap_recovery_steel_2
+    - scrap_recovery_steel_3
     - DUMMY_ore_supply
     - DUMMY_limestone_supply_steel
     - DUMMY_coal_supply
