--- a/message_ix_models/data/transport/R12/config.yaml
+++ b/message_ix_models/data/transport/R12/config.yaml
@@ -31,39 +31,38 @@ node to census_division:
 
 minimum activity:
   # Source: manually calculated from scale-1.csv for
-  # ixmp://ixmp-dev/MESSAGEix-GLOBIOM 1.1-T-R12 ci nightly/SSP_2024.2 baseline#73
-  # and #76. In those scenarios, all the minimum-activity values were set to 0.01.
-  # The resulting scale factors indicate the mismatch vs. expected energy input per
+  # ixmp://ixmp-dev/MESSAGEix-GLOBIOM 1.1-T-R12 ci nightly/SSP_2024.2 baseline#547
+  # In those scenarios, all the minimum-activity values were set to 0.01. The
+  # resulting scale factors indicate the mismatch vs. expected energy input per
   # IEA EWEB. These values are computed to make those scale factors come out near
   # 1.0.
   # TODO reduce or remove these once technology activities are calibrated directly
-  - [R12_AFR, ROAD, ethanol, 0.01]
-  - [R12_CHN, RAIL, electr, 0.01]
-  - [R12_CHN, ROAD, ethanol, 0.01]
-  - [R12_CHN, ROAD, gas, 0.01]
-  - [R12_EEU, RAIL, electr, 0.01]
-  - [R12_EEU, ROAD, gas, 0.01]
-  - [R12_FSU, RAIL, electr, 0.01]
-  - [R12_FSU, RAIL, lightoil, 0.01]
-  - [R12_FSU, ROAD, electr, 0.01]
-  - [R12_FSU, ROAD, gas, 0.01]
-  - [R12_LAM, RAIL, electr, 0.01]
-  - [R12_LAM, RAIL, lightoil, 0.01]
-  - [R12_LAM, ROAD, gas, 0.01]
-  - [R12_MEA, RAIL, electr, 0.01]
-  - [R12_MEA, RAIL, lightoil, 0.01]
-  - [R12_MEA, ROAD, gas, 0.01]
-  - [R12_NAM, RAIL, electr, 0.01]
-  - [R12_PAO, RAIL, electr, 0.01]
-  - [R12_PAO, ROAD, gas, 0.01]
-  - [R12_PAS, RAIL, electr, 0.01]
-  - [R12_PAS, ROAD, gas, 0.01]
-  - [R12_RCPA, RAIL, lightoil, 0.01]
-  - [R12_RCPA, ROAD, gas, 0.01]
-  - [R12_SAS, RAIL, electr, 0.01]
-  - [R12_SAS, ROAD, gas, 0.01]
-  - [R12_WEU, RAIL, electr, 0.01]
-  - [R12_WEU, ROAD, gas, 0.01]
+  - [R12_AFR,  RAIL,  lightoil, 0.028]
+  - [R12_CHN,  RAIL,  electr,   2.329]
+  - [R12_CHN,  ROAD,  electr,   0.036]
+  - [R12_CHN,  ROAD,  ethanol,  0.073]
+  - [R12_CHN,  ROAD,  gas,      0.292]
+  - [R12_EEU,  RAIL,  electr,   0.210]
+  - [R12_EEU,  ROAD,  gas,      0.020]
+  - [R12_FSU,  RAIL,  electr,   1.553]
+  - [R12_FSU,  RAIL,  lightoil, 0.046]
+  - [R12_FSU,  ROAD,  gas,      0.406]
+  - [R12_LAM,  RAIL,  electr,   0.100]
+  - [R12_LAM,  RAIL,  lightoil, 0.135]
+  - [R12_MEA,  RAIL,  electr,   0.055]
+  - [R12_MEA,  ROAD,  gas,      0.240]
+  - [R12_NAM,  RAIL,  electr,   0.175]
+  - [R12_NAM,  RAIL,  lightoil, 0.500]
+  - [R12_PAO,  RAIL,  electr,   0.492]
+  - [R12_PAO,  ROAD,  ethanol,  0.059]
+  - [R12_PAS,  RAIL,  electr,   0.197]
+  - [R12_PAS,  ROAD,  gas,      0.178]
+  - [R12_RCPA, ROAD,  ethanol,  0.130]
+  - [R12_SAS,  RAIL,  electr,   0.457]
+  - [R12_SAS,  ROAD,  ethanol,  0.070]
+  - [R12_SAS,  ROAD,  gas,      0.057]
+  - [R12_WEU,  RAIL,  electr,   1.168]
+  - [R12_WEU,  ROAD,  gas,      0.049]
 
 share weight convergence:
   # Settings from MESSAGE (V)-Transport
