Fix nuc_lc set config

--- a/message_ix_models/data/water/set.yaml
+++ b/message_ix_models/data/water/set.yaml
@@ -50,6 +50,7 @@ cooling:
     - cooling__loil_cc
     - cooling__loil_ppl
     - cooling__nuc_hc
+    - cooling__nuc_lc
     - cooling__solar_th_ppl
     - cooling__csp_sm1_ppl
     - cooling__csp_sm3_ppl
@@ -94,105 +95,87 @@ cooling:
     - extract__saline_supply
     - bio_hpl__ot_fresh
     - bio_hpl__cl_fresh
-    - bio_hpl__cl_fresh
     - bio_hpl__ot_saline
     - bio_hpl__air
     - bio_istig__ot_fresh
-    - bio_istig__cl_fresh
     - bio_istig__cl_fresh
     - bio_istig__ot_saline
     - bio_istig__air
     - bio_istig_ccs__ot_fresh
     - bio_istig_ccs__cl_fresh
-    - bio_istig_ccs__cl_fresh
     - bio_istig_ccs__ot_saline
     - bio_istig_ccs__air
     - bio_ppl__ot_fresh
-    - bio_ppl__cl_fresh
     - bio_ppl__cl_fresh
     - bio_ppl__ot_saline
     - bio_ppl__air
     - coal_adv__ot_fresh
     - coal_adv__cl_fresh
-    - coal_adv__cl_fresh
     - coal_adv__ot_saline
     - coal_adv__air
     - coal_adv_ccs__ot_fresh
     - coal_adv_ccs__cl_fresh
-    - coal_adv_ccs__cl_fresh
     - coal_adv_ccs__ot_saline
     - coal_ppl__ot_fresh
-    - coal_ppl__cl_fresh
     - coal_ppl__cl_fresh
     - coal_ppl__ot_saline
     - coal_ppl__air
     - coal_ppl_u__ot_fresh
     - coal_ppl_u__cl_fresh
-    - coal_ppl_u__cl_fresh
     - coal_ppl_u__ot_saline
     - coal_ppl_u__air
     - foil_hpl__ot_fresh
-    - foil_hpl__cl_fresh
     - foil_hpl__cl_fresh
     - foil_hpl__ot_saline
     - foil_hpl__air
     - foil_ppl__ot_fresh
     - foil_ppl__cl_fresh
-    - foil_ppl__cl_fresh
     - foil_ppl__ot_saline
     - foil_ppl__air
     - gas_cc__ot_fresh
-    - gas_cc__cl_fresh
     - gas_cc__cl_fresh
     - gas_cc__ot_saline
     - gas_cc__air
     - gas_cc_ccs__ot_fresh
     - gas_cc_ccs__cl_fresh
-    - gas_cc_ccs__cl_fresh
     - gas_cc_ccs__ot_saline
     - gas_hpl__ot_fresh
-    - gas_hpl__cl_fresh
     - gas_hpl__cl_fresh
     - gas_hpl__ot_saline
     - gas_hpl__air
     - gas_ppl__ot_fresh
     - gas_ppl__cl_fresh
-    - gas_ppl__cl_fresh
     - gas_ppl__ot_saline
     - gas_ppl__air
     - geo_hpl__ot_fresh
-    - geo_hpl__cl_fresh
     - geo_hpl__cl_fresh
     - geo_hpl__ot_saline
     - geo_hpl__air
     - geo_ppl__ot_fresh
     - geo_ppl__cl_fresh
-    - geo_ppl__cl_fresh
     - geo_ppl__ot_saline
     - geo_ppl__air
     - igcc__ot_fresh
-    - igcc__cl_fresh
     - igcc__cl_fresh
     - igcc__ot_saline
     - igcc__air
     - igcc_ccs__ot_fresh
     - igcc_ccs__cl_fresh
-    - igcc_ccs__cl_fresh
     - igcc_ccs__ot_saline
     - loil_cc__ot_fresh
-    - loil_cc__cl_fresh
     - loil_cc__cl_fresh
     - loil_cc__ot_saline
     - loil_cc__air
     - loil_ppl__ot_fresh
     - loil_ppl__cl_fresh
-    - loil_ppl__cl_fresh
     - loil_ppl__ot_saline
     - loil_ppl__air
     - nuc_hc__ot_fresh
     - nuc_hc__cl_fresh
-    - nuc_hc__cl_fresh
     - nuc_hc__ot_saline
+    - nuc_lc__ot_fresh
+    - nuc_lc__cl_fresh
+    - nuc_lc__ot_saline
     - solar_th_ppl__ot_fresh
     - solar_th_ppl__cl_fresh
     - solar_th_ppl__ot_saline
@@ -363,6 +346,10 @@ cooling:
     - nuc_hc__cl_fresh
     - nuc_hc__ot_saline
     - nuc_hc__air
+    - nuc_lc__ot_fresh
+    - nuc_lc__cl_fresh
+    - nuc_lc__ot_saline
+    - nuc_lc__air
     - solar_th_ppl__ot_fresh
     - solar_th_ppl__cl_fresh
     - solar_th_ppl__ot_saline
