--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,19 @@
 repos:
-- repo: local
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.14.1
   hooks:
   - id: mypy
-    name: mypy
-    always_run: true
-    require_serial: true
     pass_filenames: false
-
-    language: python
-    entry: bash -c ". ${PRE_COMMIT_MYPY_VENV:-/dev/null}/bin/activate 2>/dev/null; mypy $0 $@; python -m pip list"
     additional_dependencies:
-    - mypy >= 1.13.0
+    - "ixmp @ git+https://github.com/iiasa/ixmp.git@main"
+    - "message-ix @ git+https://github.com/iiasa/message_ix.git@main"
     - plotnine
     - pytest
     - sdmx1
     - types-PyYAML
     - types-tqdm
-    - "ixmp @ git+https://github.com/iiasa/ixmp.git@main"
-    - "message-ix @ git+https://github.com/iiasa/message_ix.git@main"
-    args: ["."]
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.7.4
+  rev: v0.9.1
   hooks:
   - id: ruff
   - id: ruff-format
