Add "check" as direct dep of "pytest" CI job

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -60,7 +60,7 @@ jobs:
         ref: ${{ needs.check.outputs.ref }}
 
   pytest:
-    needs: warm-lfs-cache
+    needs: [ check, warm-lfs-cache ]
 
     strategy:
       matrix:
